# AMELAS_SFELMountController

./: .gitignore  .gitmodules
AMELAS_SFELMountController/: CMakeLists - copia.txt  CMakeLists.txt
AMELAS_SFELMountController/CMakeModules/: CMakeMacros.cmake
AMELAS_SFELMountController/config/: config.json
AMELAS_SFELMountController/examples/: CMakeLists.txt  ExampleAmelasControllerClient.cpp  ExampleAmelasControllerServer.cpp
AMELAS_SFELMountController/includes/: AmelasClientInterface  AmelasServerInterface  libamelas_global.h
AMELAS_SFELMountController/includes/AmelasAdsClient/: amelas_ads_client.h  amelas_ads_client.tpp
AMELAS_SFELMountController/includes/AmelasController/: amelas_controller.h  common.h
AMELAS_SFELMountController/includes/AmelasControllerClient/: amelas_controller_client.h
AMELAS_SFELMountController/includes/AmelasControllerServer/: amelas_controller_server.h  amelas_controller_server.tpp  common.h
AMELAS_SFELMountController/sources/AmelasAdsClient/: amelas_ads_client.cpp
AMELAS_SFELMountController/sources/AmelasController/: amelas_controller.cpp  common.cpp
AMELAS_SFELMountController/sources/AmelasControllerClient/: amelas_controller_client.cpp
AMELAS_SFELMountController/sources/AmelasControllerServer/: amelas_controller_server.cpp
AMELAS_SFELMountController/sources/Applications/AmelasControllerServerApp/: AmelasControllerServerApp.cpp
AMELAS_SFELMountController/testing/: CMakeLists.txt
